<resources>
    <string name="app_name">Home Security</string>
    <string name="username">UserName</string>
    <string name="login">Login to Home Security</string>
    <string name="password">password</string>
    <string name="loginB">login</string>
    <string name="cameras">Cameras</string>
    <string name="Indoor_Lights">Inside Lights</string>
    <string name="Out_Door_Lights">Outside Lights</string>
    <string name="Devices">Devices</string>
    <string name="LockDoors">Lock Doors</string>
    <string name="HomeScreen">Main Menu</string>
    <string name="Registration">New User</string>
    <string name="registration">User Registration</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="SubmitButton">"Submit "</string>
    <string name="Back">Back</string>
    <string name="SelectMain">Please choose one:</string>
    <string name="addcameras">Add Camera</string>
    <string name="changeCameras">Change Cameras</string>
    <string name="CameraStatus">Camera Status</string>
    <string name="deletecameras">Delete Cameras</string>
    <string name="addDevices">Add Devices</string>
    <string name="deleteDevices">"Delete Devices "</string>
    <string name="changeDevices">Change Devices</string>
    <string name="add_inside_lights">Add inside lights</string>
    <string name="delete_inside_lights">Delete inside lights</string>
    <string name="change_inside_lights">Change inside lights</string>
    <string name="add_outside_lights">Add outside lights</string>
    <string name="delete_outside_lights">Delete outside lights</string>
    <string name="change_outside_lights">change outside lights</string>
    <string name="lights_on">Lights On</string>
    <string name="lights_off">Lights Off</string>
    <string name="outside_lights_Status">outside lights Status</string>
    <string name="unlockdoorb">Unlock Doors</string>
    <string name="frontLockDoors">Lock Front Door</string>
    <string name="frontunlockdoorb">Unlock Front Door</string>
    <string name="backunlockdoorb">"Unlock Back Door "</string>
    <string name="backLockDoorsb">Lock Back Door</string>
    <string name="cameraloc">Camera Location</string>
    <string name="camera_angle">"What Is The Camera Facing? "</string>
    <string name="cameras_setting_text">Add Camera Settings</string>
    <string name="delete_cameraloc">ID number of Camera?</string>
    <string name="delete_cameras_setting_text">Delete Camera Settings</string>
    <string name="delete_camera_button">Delete Camera</string>
    <string name="cameraID">Enter Camera ID</string>
    <string name="deviceloc">Enter Your Device Make And Model</string>
    <string name="DeviceOwner">Who Is The Device Owner?</string>
    <string name="deviceID">Enter Device ID</string>
    <string name="insideLightsRoom">What Room Is The Light In?</string>
    <string name="typeOfLight">Type Of Light?</string>
    <string name="addLight">Add Inside Lights</string>
    <string name="lightsID">Enter Light ID</string>
    <string name="OutsideLightsRoom">What Side Of House?</string>

</resources>