<?xml version="1.0" encoding="utf-8"?>

<LinearLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app='http://schemas.android.com/apk/res-auto'
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/blue72"
    tools:context=".LoginActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="754dp"
        app:cardElevation="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="714dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:id="@+id/HomeScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HomeScreen"
                android:textAlignment="center"
                android:textColor="@color/blue83"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/HomeScreen2"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="30dp"
                android:text="@string/SelectMain"
                android:textAlignment="center"
                android:textColor="@color/blue83"
                android:textSize="20sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/Cameras"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blue72"
                android:text="@string/cameras"
                android:textSize="18sp"
                app:cornerRadius="200dp" />

            <Button
                android:id="@+id/InSideLights"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blue72"
                android:text="@string/Indoor_Lights"
                android:textSize="18sp"
                app:cornerRadius="200dp" />


            <Button
                android:id="@+id/OutSideLights"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blue72"
                android:text="@string/Out_Door_Lights"
                android:textSize="18sp"
                app:cornerRadius="200dp" />

            <Button
                android:id="@+id/Devices"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blue72"
                android:text="@string/Devices"
                android:textSize="18sp"
                app:cornerRadius="200dp" />

            <Button
                android:id="@+id/LockDoors"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blue72"
                android:text="@string/LockDoors"
                android:textSize="18sp"
                app:cornerRadius="200dp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>



</LinearLayout>