<?xml version="1.0" encoding="utf-8"?>
<LinearLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app='http://schemas.android.com/apk/res-auto'
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/blue72"
    tools:context=".Registration">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="754dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="111dp"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textColor="@color/blue83"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/FirstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/FirstName"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black" />

            <EditText
                android:id="@+id/LastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/LastName"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"/>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:inputType="textPassword"
                />

            <Button
                android:id="@+id/SubmitButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blue72"
                android:text="@string/SubmitButton"
                android:textSize="18sp"
                app:cornerRadius="200dp" />

            <Button
                android:id="@+id/back"
                android:layout_width="129dp"
                android:layout_height="31dp"
                android:layout_marginTop="70dp"
                android:backgroundTint="@color/blue72"
                android:text="@string/Back"
                android:textSize="9sp"
                app:cornerRadius="200dp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>



</LinearLayout>